fix: modal close button sticky on top of modal, stays visible on scroll

--- a/css/style.css
+++ b/css/style.css
@@ -922,10 +922,11 @@ strong {
 }
 
 .modal-close {
-    position: fixed;
-    top: 1.2rem;
-    right: 1.2rem;
+    position: sticky;
+    top: 0;
     z-index: 2001;
+    float: right;
+    margin-bottom: -36px;
     width: 36px;
     height: 36px;
     display: flex;
